# Scaler-OpenEnv-Hack

./: .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  logic.py  openenv.yaml  pyproject.toml  requirements.txt  restructure.py  tasks.py  tasks.yaml  test_logic.py  todo.md  validate.py  validate.sh  validate_out.txt
server/: app.py  environment.py  grader.py  logic.py  models.py  tasks.py
