[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-debugger-agent"
version = "1.0.0"
description = "A SQL Database Debugger OpenEnv environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.5.3",
    "openai>=1.10.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "sqlparse==0.4.4",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start"
